--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,6 @@ android {
         }
     }
     dexOptions {
-        incremental true
     }
 
     compileOptions {
@@ -40,8 +39,16 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.google.android.gms:play-services-location:10.2.0'
     compile 'com.google.android.gms:play-services-maps:10.2.0'
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
+
+    compile 'com.google.firebase:firebase-core:10.2.0'
+    compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.google.firebase:firebase-auth:10.2.0'
+    compile 'com.firebaseui:firebase-ui-database:1.0.0'
+    compile 'com.google.firebase:firebase-messaging:10.2.0'
+    compile 'com.google.firebase:firebase-storage:10.2.0'
+    compile 'com.firebase:firebase-jobdispatcher:0.5.2'
     testCompile 'junit:junit:4.12'
-    compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.makeramen:roundedimageview:2.0.1'
     //Gson
@@ -54,12 +61,11 @@ dependencies {
     //RxJava
     compile 'io.reactivex:rxandroid:1.2.1'
     //Facebook
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-
+    compile 'com.facebook.android:facebook-android-sdk:4.9.0'
     //OpenWeatherMap
     compile 'com.github.code-crusher:EasyWeather:v1.2'
-
     //butter knife
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
+apply plugin: 'com.google.gms.google-services'
